# AI-RAG-Medical-KnowledgeBase

./: README.md  _The most common cancer in children.csv  _What Are Childhood Cancers.txt  app.py  chunk.py  data.md  embed.py  pyproject.toml  pyvenv.cfg  requirements.txt
